# unified-solutions-platform

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  charts.py  connections.py  connectors.py  dashboards.py  datasets.py  deps.py  marketplace.py  notebooks.py  public.py  queries.py  schemas.py  workspaces.py
backend/app/compute/: _notebook_kernel.py  _notebook_runner.py  engine.py  kernel_manager.py  notebook_exec.py
backend/app/connectors/: __init__.py  base.py  extractor.py  registry.py
backend/app/connectors/sources/: __init__.py  commcare.py  csv_upload.py  databricks.py  dhis2.py  google_drive.py  google_sheets.py  kobo.py  odk_central.py  postgres.py  rest_webhook.py  surveycto.py
backend/app/core/: authorize.py  config.py  crypto.py  db.py  logging.py  ratelimit.py  security.py
backend/app/models/: __init__.py  base.py  compute.py  dashboards.py  ingestion.py  platform.py
backend/app/scripts/: create_superadmin.py  init_db.py  seed.py  seed_amr.py  seed_demo.py
backend/app/services/: connection_service.py  dataset_service.py
backend/app/storage/: object_store.py
backend/tests/: test_connectors.py  test_crypto.py
docs/: ARCHITECTURE.md  architecture.html
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
infra/: docker-compose.yml
(+61 files in other folders)
