[project]
name = "usp-backend"
version = "0.1.0"
description = "Unified Solutions Platform — backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42.0",
    "httpx>=0.27",
    "tenacity>=8.4",
    "redis>=5.0",
    "arq>=0.26",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "uuid6>=2024.1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "asgi-lifespan>=2.1",
]
# Heavier data deps land with P1/P2 (kept separate so the API image stays lean):
# duckdb, pyarrow, pandas, openpyxl, sqlglot, jsonpath-ng, databricks-sql-connector,
# google-api-python-client, boto3

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
